# LCTHW-Exercices

./: README.md
ex1/: Makefile  ex1  ex1.c
ex15/: ex  ex15.c
ex16/: ex  ex16.c
ex17/: ex  ex17.c
ex18/: ex  ex18.c
ex19/: ex  ex19.c
ex2/: Makefile
ex22/: Makefile  ex22.c  ex22.h  ex22_main  ex22_main.c
ex23/: ex  ex23.c
ex24/: ex  ex24.c
ex25/: Makefile  ex  ex25.c
ex26/: Makefile  config.c  config.h  logfind  logfind.c  test.sh
ex27/: ex  ex1.c
ex29/: ex29  ex29.c  libex29.c
ex29b/: Makefile
ex29b/tests/: automated_test.c~  automated_tests  automated_tests.c  runtests.sh~
ex3/: ex  ex3.c
ex30/tests/: libex29_tests  libex29_tests.c  runtests.sh
ex35/: ex  ex35.c
ex4/template/: Makefile
ex7/: ex  ex7.c
liblcthw/: .gitignore  CMakeLists.txt  Makefile
liblcthw/src/lcthw/: darray.c  darray.h  darray_algos.c  darray_algos.h  hashmap.c  hashmap.h  list.c  list.h  list_algos.c  list_algos.h  radixmap.c  radixmap.h
liblcthw/tests/: darray_algos_tests.c  darray_tests.c  hashmap_tests.c  list_algos_tests.c  list_tests  list_tests.c  minunit.h  radixmap_tests.c  runtests.sh
skeleton/: .gitignore  Makefile
skeleton/src/: dbg.h  minunit.h
skeleton/tests/: minunit.h  runtests.sh
